--- a/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -12,9 +12,32 @@
         tools:layout="@layout/fragment_shop" />
     <fragment
         android:id="@+id/item_community"
-        android:name="com.petpal.mungmate.CommunityFragment"
+        android:name="com.petpal.mungmate.community.CommunityFragment"
         android:label="fragment_community"
-        tools:layout="@layout/fragment_community" />
+        tools:layout="@layout/fragment_community">
+
+        <action
+            android:id="@+id/action_item_community_to_communityWritingFragment"
+            app:destination="@id/communityWritingFragment"
+            app:enterAnim="@anim/from_bottom"
+            app:popEnterAnim="@anim/from_top" />
+        <action
+            android:id="@+id/action_item_community_to_communityPostDetailFragment"
+            app:destination="@id/communityPostDetailFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right">
+
+            <argument
+                android:name="idx"
+                app:argType="integer" />
+
+        </action>
+        <action
+            android:id="@+id/action_item_community_to_communityDetailModifyFragment"
+            app:destination="@id/communityDetailModifyFragment" />
+    </fragment>
     <fragment
         android:id="@+id/item_walk"
         android:name="com.petpal.mungmate.WalkFragment"
@@ -30,4 +53,50 @@
         android:name="com.petpal.mungmate.MyPageFragment"
         android:label="fragment_my_page"
         tools:layout="@layout/fragment_my_page" />
+    <fragment
+        android:id="@+id/communityWritingFragment"
+        android:name="com.petpal.mungmate.community.CommunityWritingFragment"
+        android:label="fragment_community_writing"
+        tools:layout="@layout/fragment_community_writing">
+        <action
+            android:id="@+id/action_communityWritingFragment_to_item_community"
+            app:destination="@id/item_community"
+            app:enterAnim="@anim/from_top"
+            app:popEnterAnim="@anim/from_bottom" />
+    </fragment>
+    <fragment
+        android:id="@+id/communityPostDetailFragment"
+        android:name="com.petpal.mungmate.community.CommunityPostDetailFragment"
+        android:label="CommunityPostDetailFragment">
+        <action
+            android:id="@+id/action_communityPostDetailFragment_to_item_community"
+            app:destination="@id/item_community"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/from_right"
+            app:popExitAnim="@anim/to_left" />
+        <action
+            android:id="@+id/action_communityPostDetailFragment_to_communityDetailModifyFragment"
+            app:destination="@id/communityDetailModifyFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
+    </fragment>
+    <fragment
+        android:id="@+id/communityDetailModifyFragment"
+        android:name="com.petpal.mungmate.community.CommunityDetailModifyFragment"
+        android:label="fragment_community_detail_modify"
+        tools:layout="@layout/fragment_community_detail_modify" >
+        <action
+            android:id="@+id/action_communityDetailModifyFragment_to_item_community"
+            app:destination="@id/item_community" />
+        <action
+            android:id="@+id/action_communityDetailModifyFragment_to_communityPostDetailFragment"
+            app:destination="@id/communityPostDetailFragment"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/from_right"
+            app:popExitAnim="@anim/to_left" />
+    </fragment>
 </navigation>
