--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,4 +61,7 @@
     <color name="md_theme_dark_surfaceTint">#F1C048</color>
     <color name="md_theme_dark_outlineVariant">#4D4639</color>
     <color name="md_theme_dark_scrim">#000000</color>
+    <color name="dividerColor">#80000000</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
