feat: 산책 기록 ui 마이페이지 수정

--- a/app/src/main/res/drawable/circular_shape.xml
+++ b/app/src/main/res/drawable/circular_shape.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="#FFC691F6" >
+<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="#A0A0A0" >
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/md_theme_light_tertiaryContainer" />
+            <solid android:color="#99FFB3B3" />
         </shape>
     </item>
 
