--- a/app/src/main/res/layout/row_community_comment.xml
+++ b/app/src/main/res/layout/row_community_comment.xml
@@ -16,48 +16,42 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/communityCommentProfileImage"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/common_margin"
+            android:layout_marginTop="@dimen/common_margin"
+            android:layout_marginBottom="@dimen/common_margin"
             android:background="@android:color/transparent"
-            android:paddingStart="@dimen/common_padding"
-            android:paddingEnd="@dimen/common_padding"
-            android:paddingBottom="@dimen/common_padding"
+            android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/communityCommentPostTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="제목"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            app:layout_constraintStart_toEndOf="@id/communityCommentProfileImage"
-            app:layout_constraintTop_toTopOf="@id/communityCommentProfileImage" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/communityCommentMenuImageButton"
+            style="@style/Widget.AppCompat.ImageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/communityCommentPostTitle"
-            app:layout_constraintBottom_toBottomOf="@id/communityCommentPostTitle"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="@dimen/common_margin"
-            android:src="@drawable/more_vert"
             android:backgroundTint="@android:color/transparent"
-            style="@style/Widget.AppCompat.ImageButton"/>
+            android:src="@drawable/more_vert"
+            app:layout_constraintBottom_toBottomOf="@id/communityCommentPostDateCreated"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/communityCommentUserNickName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/common_margin"
             android:text="닉네임"
-            android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:layout_constraintStart_toStartOf="@id/communityCommentPostTitle"
-            app:layout_constraintTop_toBottomOf="@id/communityCommentPostTitle" />
+            android:textColor="@color/black"
+            app:layout_constraintStart_toEndOf="@id/communityCommentProfileImage"
+            app:layout_constraintTop_toTopOf="@id/communityCommentProfileImage" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/communityCommentUserPlace"
@@ -65,18 +59,16 @@
             android:layout_height="wrap_content"
             android:text="제주 제주시 애월읍"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:layout_constraintStart_toStartOf="@id/communityCommentPostTitle"
+            app:layout_constraintStart_toStartOf="@id/communityCommentUserNickName"
             app:layout_constraintTop_toBottomOf="@id/communityCommentUserNickName" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/communityCommentPostDateCreated"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="@dimen/common_padding"
-            android:paddingEnd="@dimen/common_padding"
-            android:text="30분전"
+            android:text="@string/place_date_distinction"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/communityCommentUserPlace"
             app:layout_constraintTop_toBottomOf="@id/communityCommentUserNickName" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -88,7 +80,7 @@
         android:ellipsize="end"
         android:maxLines="4"
         android:padding="@dimen/common_padding"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/communityCommentProfileConstraintLayout"
@@ -111,7 +103,7 @@
             android:drawableStart="@drawable/favorite_border"
             android:drawablePadding="@dimen/common_small_padding"
             android:text="@string/favorite"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/communityCommentCommentTextView"
@@ -121,7 +113,7 @@
             android:drawableStart="@drawable/comment"
             android:drawablePadding="@dimen/common_small_padding"
             android:text="@string/comment"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
     </LinearLayout>
 
@@ -130,7 +122,9 @@
         android:id="@+id/communityCommentDivider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/common_margin"
         android:layout_marginTop="@dimen/common_padding"
+        android:layout_marginEnd="@dimen/common_margin"
         app:dividerColor="@color/dividerColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
