#5 시작하기 화면 완료 todo - kakao, google 더 괜찮은 아이콘 찾아보기 #13 사용자 정보 화면 완료

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,4 +61,8 @@
     <color name="md_theme_dark_surfaceTint">#F1C048</color>
     <color name="md_theme_dark_outlineVariant">#4D4639</color>
     <color name="md_theme_dark_scrim">#000000</color>
+
+    <!-- login button colors -->
+    <color name="kakao_login_btn_backgroundTint">#FEE500</color>
+    <color name="google_login_btn_backgroundTint">#FFFFFF</color>
 </resources>
