--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -29,37 +29,37 @@
 
         <com.google.android.material.chip.Chip
             android:id="@+id/allChip"
-            style="@style/Widget.Material3.Chip.Filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/chip_all"
+            style="@style/CustomChipChoice"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             app:checkedIcon="@null"
             app:checkedIconVisible="false" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/dailyChip"
-            style="@style/Widget.Material3.Chip.Filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/chip_daily"
+            style="@style/CustomChipChoice"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             app:checkedIcon="@null"
             app:checkedIconVisible="false" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/walkLogChip"
-            style="@style/Widget.Material3.Chip.Filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/chip_walk_log"
+            style="@style/CustomChipChoice"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             app:checkedIcon="@null"
             app:checkedIconVisible="false" />
 
         <com.google.android.material.chip.Chip
             android:id="@+id/place_review"
-            style="@style/Widget.Material3.Chip.Filter"
+            style="@style/CustomChipChoice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/place_review"
