--- a/app/src/main/res/layout/fragment_walk_history.xml
+++ b/app/src/main/res/layout/fragment_walk_history.xml
@@ -86,7 +86,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="7"
-                            android:text="오후 13:00 ~ 오흐 14:00 (1시간)" />
+                            android:text="13:00 ~ 14:00 (1시간)" />
                     </LinearLayout>
 
                     <LinearLayout
