--- a/app/src/main/res/layout/fragment_walk_history_detail.xml
+++ b/app/src/main/res/layout/fragment_walk_history_detail.xml
@@ -30,20 +30,61 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/textViewDateDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="2023.09.12"
+                android:text="2023.09.12 (화)"
                 android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
+                android:textAppearance="?attr/textAppearanceHeadline5" />
 
-            <TextView
-                android:id="@+id/textView17"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="14:00~14:40"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="12dp"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/chip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/background_round_corner"
+                    android:backgroundTint="@color/md_theme_light_onBackground"
+                    android:paddingStart="8dp"
+                    android:paddingTop="4dp"
+                    android:paddingEnd="8dp"
+                    android:paddingBottom="4dp"
+                    android:text="시작"
+                    android:textColor="@color/md_theme_light_background" />
+
+                <TextView
+                    android:id="@+id/rowTextViewWalkTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:text="14:00" />
+
+                <TextView
+                    android:id="@+id/chip2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:background="@drawable/background_round_corner"
+                    android:backgroundTint="@color/md_theme_light_onBackground"
+                    android:paddingStart="8dp"
+                    android:paddingTop="4dp"
+                    android:paddingEnd="8dp"
+                    android:paddingBottom="4dp"
+                    android:text="종료"
+                    android:textColor="@color/md_theme_light_background" />
+
+                <TextView
+                    android:id="@+id/rowTextViewWalkDist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:text="14:40" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/textView13"
