--- a/app/src/main/res/layout/row_walk_history_monthly.xml
+++ b/app/src/main/res/layout/row_walk_history_monthly.xml
@@ -14,8 +14,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -38,13 +37,76 @@
                     android:textAppearance="@style/TextAppearance.Material3.DisplayMedium" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/rowTextViewWalkSumm"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_weight="1"
-                android:text="천재견 두부님과 산책" />
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/rowTextViewWalkSumm"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="14:00 ~ 14:40" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/chip"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/background_round_corner"
+                        android:backgroundTint="@color/md_theme_light_onBackground"
+                        android:paddingStart="8dp"
+                        android:paddingTop="4dp"
+                        android:paddingEnd="8dp"
+                        android:paddingBottom="4dp"
+                        android:text="시간"
+                        android:textColor="@color/md_theme_light_background" />
+
+                    <TextView
+                        android:id="@+id/rowTextViewWalkTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:text="40분" />
+
+                    <TextView
+                        android:id="@+id/chip2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:background="@drawable/background_round_corner"
+                        android:backgroundTint="@color/md_theme_light_onBackground"
+                        android:paddingStart="8dp"
+                        android:paddingTop="4dp"
+                        android:paddingEnd="8dp"
+                        android:paddingBottom="4dp"
+                        android:text="거리"
+                        android:textColor="@color/md_theme_light_background" />
+
+                    <TextView
+                        android:id="@+id/rowTextViewWalkDist"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:text="2.5km" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/rowTextViewWalkMemo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="천재견 두부님과 산책"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
+
+            </LinearLayout>
 
             <ImageView
                 android:id="@+id/imageView4"
