fix : secondary색 분홍색에서 노란색 계열로 변경 + 오타수정

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 
 <resources>
-    <color name="seed">#FFD166</color>
+
     <color name="md_theme_light_primary">#785A00</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
     <color name="md_theme_light_primaryContainer">#FFDF9B</color>
     <color name="md_theme_light_onPrimaryContainer">#251A00</color>
-    <color name="md_theme_light_secondary">#9C4145</color>
+    <color name="md_theme_light_secondary">#FFD166</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
     <color name="md_theme_light_secondaryContainer">#FFDAD9</color>
     <color name="md_theme_light_onSecondaryContainer">#400009</color>
