feat : favorite 버튼 lottie 애니메이션 추가#2

--- a/app/src/main/res/layout/row_community.xml
+++ b/app/src/main/res/layout/row_community.xml
@@ -41,8 +41,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="닉네임"
-            android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@id/communityPostTitle"
             app:layout_constraintTop_toBottomOf="@id/communityPostTitle" />
 
@@ -125,20 +125,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/communityContent">
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/communityFavoriteLottie"
+            android:layout_width="30dp"
+            android:layout_height="40dp"
+            android:scaleType="centerCrop"
+            app:lottie_rawRes="@raw/favorite" />
+
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/communityFavoriteTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/favorite_border"
-            android:drawablePadding="@dimen/common_small_padding"
-            android:text="@string/favorite"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+            android:layout_gravity="center"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:text="좋아요 7"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/communityCommentTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/common_padding"
+            android:layout_gravity="center"
             android:drawableStart="@drawable/comment"
             android:drawablePadding="@dimen/common_small_padding"
             android:text="@string/comment"
@@ -151,8 +157,8 @@
         android:id="@+id/communityDivider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/common_padding"
         android:layout_marginStart="@dimen/common_margin"
+        android:layout_marginTop="@dimen/common_padding"
         android:layout_marginEnd="@dimen/common_margin"
         app:dividerColor="@color/dividerColor"
         app:layout_constraintEnd_toEndOf="parent"
