--- a/app/src/main/res/layout/fragment_community_detail_modify.xml
+++ b/app/src/main/res/layout/fragment_community_detail_modify.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".community.CommunityDetailModifyFragment">
+    tools:context=".ui.community.CommunityDetailModifyFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/communityModifyToolbar"
