--- a/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -12,7 +12,7 @@
         tools:layout="@layout/fragment_shop" />
     <fragment
         android:id="@+id/item_community"
-        android:name="com.petpal.mungmate.community.CommunityFragment"
+        android:name="com.petpal.mungmate.ui.community.CommunityFragment"
         android:label="fragment_community"
         tools:layout="@layout/fragment_community">
 
@@ -86,7 +86,7 @@
 
     <fragment
         android:id="@+id/communityWritingFragment"
-        android:name="com.petpal.mungmate.community.CommunityWritingFragment"
+        android:name="com.petpal.mungmate.ui.community.CommunityWritingFragment"
         android:label="fragment_community_writing"
         tools:layout="@layout/fragment_community_writing">
         <action
@@ -97,7 +97,7 @@
     </fragment>
     <fragment
         android:id="@+id/communityPostDetailFragment"
-        android:name="com.petpal.mungmate.community.CommunityPostDetailFragment"
+        android:name="com.petpal.mungmate.ui.community.CommunityPostDetailFragment"
         android:label="CommunityPostDetailFragment">
         <action
             android:id="@+id/action_communityPostDetailFragment_to_item_community"
@@ -116,7 +116,7 @@
     </fragment>
     <fragment
         android:id="@+id/communityDetailModifyFragment"
-        android:name="com.petpal.mungmate.community.CommunityDetailModifyFragment"
+        android:name="com.petpal.mungmate.ui.community.CommunityDetailModifyFragment"
         android:label="fragment_community_detail_modify"
         tools:layout="@layout/fragment_community_detail_modify">
 
